# ReingresosHospitalarios

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  COURSE_OVERVIEW.md  Dockerfile  README.md  README_DOCKER.md  docker-compose.yml  pyproject.toml  requirements.txt
.githooks/: pre-push
.github/workflows/: ci.yml  deploy.yml
configs/: mlflow_config.yaml  model_config.yaml
docs/: api.md  architecture.md  deployment.md  monitoring.md
flows/: training_pipeline.py
notebooks/: 01_eda.ipynb  02_baseline.ipynb  03_experiments.ipynb
scripts/: promote_model.py  run_training_if_needed.py  wait_for_mlflow.py
src/api/: main.py  schemas.py  ui.py
src/data/: download.py  preprocess.py
src/features/: engineering.py
src/models/: predict.py  train.py
src/monitoring/: drift.py
tests/integration/: test_pipeline.py
tests/unit/: test_api.py  test_features.py  test_preprocess.py
