[project]
name = "mlops-alto-costo"
version = "0.1.0"
description = "MLOps Final Project - Prediccion de Reingreso Hospitalario en Pacientes con Enfermedades de Alto Costo"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "mlflow>=3.2.0",
    "optuna>=4.4.0",
    "prefect>=3.4.0",
    "xgboost>=3.0.0",
    "scikit-learn==1.6.1",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "pyarrow>=21.0.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.0",
    "evidently>=0.4.0",
    "imbalanced-learn>=0.12.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "httpx>=0.27.0",
    "ipykernel>=6.29.0",
    "click>=8.1.0",
    "ucimlrepo>=0.0.7",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
markers = ["integration: tests que requieren datos procesados en disco"]
